--- a/app.json
+++ b/app.json
@@ -1,11 +1,12 @@
 {
   "expo": {
-    "name": "metacritic-app",
-    "slug": "metacritic-app",
+    "name": "curso-react-native-metacritic-app",
+    "slug": "curso-react-native-metacritic-app",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
+    "scheme": "metacritic",
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
@@ -22,6 +23,9 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "plugins": [
+      "expo-router"
+    ]
   }
 }
